--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "redis": "^5.6.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
