build(package.json): add ws module

--- a/jest.config.json
+++ b/jest.config.json
@@ -9,5 +9,8 @@
   "coverageDirectory": "../coverage/default",
   "testEnvironment": "node",
   "setupFilesAfterEnv": ["../setupTests.ts"],
-  "collectCoverage": true
+  "collectCoverage": true,
+  "moduleNameMapper": {
+    "^@/(.*)$": "<rootDir>/$1"
+  }
 }
