--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "estimatepoker-server",
   "version": "1.0.0",
+  "type": "commonjs",
   "description": "The server of the EstiMate Poker",
   "main": "index.js",
   "scripts": {
@@ -18,22 +19,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "redis": "^5.6.0",
     "reflect-metadata": "^0.2.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "concurrently": "^9.2.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^30.0.4",
+    "nodemon": "^3.1.10",
     "nyc": "^17.1.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.0",
