--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "The server of the EstiMate Poker",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "jest --config jest.config.json",
     "test:watch": "jest --watch",
     "generate-coverage-all-packages": "nyc report --reporter=html --reporter=text --reporter=lcov --reporter=clover --report-dir=./coverage/all --temp-dir=./coverage/temp",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "concurrently": "^9.2.0",
     "eslint": "^8.0.0",
@@ -41,6 +42,7 @@
     "nyc": "^17.1.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
 }
