--- a/jest.config.json
+++ b/jest.config.json
@@ -7,6 +7,7 @@
   },
   "collectCoverageFrom": ["**/*.(t|j)s"],
   "coverageDirectory": "../coverage/default",
+  "coveragePathIgnorePatterns": ["src/app.ts", "src/container.ts"],
   "testEnvironment": "node",
   "setupFilesAfterEnv": ["../setupTests.ts"],
   "collectCoverage": true,
